# Bone_Analysis_Modules

./: .gitignore  AutomaticContour.py  CMakeLists.txt  README.md  USAGE.md
AIMConverter/: AIMConverter.py  CMakeLists.txt
AIMConverter/Resources/: sitk_itk.py
AutoMask/: AutoMask.py  CMakeLists.txt
AutoMask/AutoMaskLib/: AutoMaskCmd.py  AutoMaskLogic.py  BatchMaskLogic.py  DeleteQtDialog.py  MaskLogic.py
AutoMask/Testing/: AutomaticContourTestLogic.py
AutomaticContour/: AutomaticContour.py  CMakeLists.txt
AutomaticContour/AutomaticContourLib/: AutocontourKnee.py  AutomaticContourCmd.py  AutomaticContourLogic.py  BatchContourLogic.py  ContourLogic.py  ContourLogicCommandLine.py  FastContourLogic.py  SegmentEditor.py
AutomaticContour/Testing/: AutomaticContourTestLogic.py
AutomaticContourLib/: AutomaticContourLogic.py  ContourLogic.py  SegmentEditor.py
BoneTesting/: BoneTesting.py
CBCTEnhance/: CBCTEnhance.py  CMakeLists.txt
CorticalBreak/: CorticalBreak.py
CorticalBreak/CorticalBreakLib/: CBCTCorticalBreakLogic.py  CorticalBreakLogic.py  MarkupsTable.py  PetersCorticalBreakLogic.py  PetersCorticalBreakLogicCommandLine.py
CorticalBreakDetection/: CMakeLists.txt  CorticalBreakDetection.py
CorticalBreakDetection/CorticalBreakDetectionLib/: CBCTCorticalBreakDetectionLogic.py  CorticalBreakDetectionCmd.py  CorticalBreakDetectionLogic.py  PetersCorticalBreakDetectionLogic.py  PetersCorticalBreakDetectionLogicCmd.py  PetersCorticalBreakDetectionLogicCommandLine.py
CorticalBreakDetection/Testing/: CorticalBreakDetectionTestLogic.py
EROSIONS_OUTPUT_DATA/: placeholder.txt
ErosionComparison/: CMakeLists.txt  ErosionComparison.py
ErosionComparison/ErosionComparisonLib/: ErosionComparisonLogic.py
ErosionDetection/: CMakeLists.txt  ErosionDetection.py
ErosionDetection/ErosionDetectionLib/: Erosion.py  ErosionDetectionLogic.py  ErosionStatisticsLogic.py  MarkupsTable.py  SegmentCopier.py  SegmentEditor.py  VoidVolumeLogic.py  VoidVolumeLogicCommandLine.py
ErosionDetection/Resources/: ErosionDetection.qrc
ErosionVolume/: CMakeLists.txt  ErosionVolume.py
ErosionVolume/ErosionVolumeLib/: ErosionStatisticsLogic.py  ErosionVolumeCmd.py  ErosionVolumeLogic.py  MarkupsTable.py  SegmentEditor.py  VoidVolumeLogic.py  VoidVolumeLogicCommandLine.py
ErosionVolume/Resources/: ErosionVolume.qrc
ErosionVolume/Testing/: ErosionVolumeTestLogic.py
FileConverter/: FileConverter.py
ImageRegistration/: CMakeLists.txt  ImageRegistration.py
JointSpaceWidth/: CMakeLists.txt  JointSpaceWidth.py
LineIntensityProfile/: LineIntensityProfile.py
TestFiles/: 2022-10-24-Scene.mrml  FAIL_MASK.mha  FAIL_MHA.mha  File Names.txt  File Reference.txt  SAMPLE_BREAKS1.nrrd  SAMPLE_BREAKS2.nrrd  SAMPLE_BREAKS3.nrrd  SAMPLE_ER1.seg.nrrd  SAMPLE_ER2.seg.nrrd  SAMPLE_ER3.seg.nrrd  SAMPLE_MHA1_separated.mha  SAMPLE_MHA1_separated_1.mha  SAMPLE_SEEDS1.json  SAMPLE_SEEDS2.json  SAMPLE_SEEDS3.json  SAMPLE_TABLE1.csv  SAMPLE_TABLE2.csv  SAMPLE_TABLE3.csv
Training/: .gitattributes  CMakeLists.txt  Training.py
Training/TrainingLib/: ErosionVolumeCmd.py  (+4 more)
WatershedSegmentation/: WatershedSegmentation.py
(+63 files in other folders)
